enable detail gc log; update mapdb